# qemu-hexagon-testing

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: build-tests.yml  create_release.yml  qcom-preflight-checks.yml
cmake/: hexagon-linux.cmake  hexagon-standalone.cmake  install_readme.md.in
hexagon-arch-tests/: Cargo.toml  build.rs  hexagon.ld  run_tests.sh
hexagon-arch-tests/.cargo/: config.toml
hexagon-arch-tests/asm/: crt0.S
hexagon-arch-tests/cosim/: q6ss.cfg
hexagon-arch-tests/src/: lib.rs
sdk_examples/: CMakeLists.txt  README.md
sdk_examples/scripts/: create_package_readme.sh
sdk_examples/stubs/include/: hexagon_standalone.h  hwio.h  q6sim_timer.h
sdk_examples/stubs/src/: subsys_linux.c  subsys_stub.c
standalone_systests/: CMakeLists.txt  README.md  hex_test.h  reg_mut.h
standalone_systests/cosim/: lock_timer_test.cfg
standalone_systests/crt0/: crt0.inc  hexagon_standalone.h  pte.S
standalone_systests/include/: cfgtable.h  dma.h  hex_test.h  hsv39.h  hvx-multi.h  hvx_misc.h  ieee_ref_output_dat.h  interrupts.h  invalid_opcode.h  mmu.h  pmu.h  qtimer.h  reg_fields_def.h  single_step.h  strutils.h  thread_common.h  timer.h  util.h  v6mpy_ref.h  vtcm_common.h
standalone_systests/include/crt0/: crt0.S  crt0_standalone.S  min_libc.c
standalone_systests/src/: access.c  badva.c  bestwait.c  boot.S  checkforpriv.c  ciad-siad.c  dirent.c  double_ex.c  dtg_interrupt.c  dtg_interrupt_asm.S  dummy_mutex.S  fastint.c  fastl2vic.c  float_excp.c  fopen.c  framelimit.c  ftrunc.c  getcwd.c  gregs.c  hsv39_tlb.c  hvx-multi-asm.S  hvx-multi.c  hvx_64b.c  hvx_ext.c  hvx_misc.c  hvx_nocoproc.c  ieee_fp.c  inf-loop.c  int_range.c  invalid_insn_for_rev.c  invalid_opcode.c  k0lock-syscfg.c  k0lock.c  k0locklock.c  levelint.c  llsc_on_excp.c  lock_timer_test.c  lock_verify.c  memcpy.c  mmu_asids.c  (+46 more)
verif-hexagon/: README.md  packet_verif
verif-hexagon/etc/: test_case.tmpl
verif-hexagon/scripts/: combine_stats.py  review.sh  subst.py
verif-hexagon/src/: __init__.py  __main__.py  adjust_output.py  gen_all.py  gen_usr.py  initialization.py  log.py  mut.py  regs.py  run_test.py
verif-qemu-hexagon/: .gitignore  README.md
verif-qemu-hexagon/scripts/: bsub_test_suite.sh  combine_stats.py  review.sh  subst.py
verif-qemu-hexagon/src/: __init__.py  __main__.py  adjust_output.py  gen_all.py  gen_usr.py  initialization.py  log.py  mut.py  regs.py  run_test.py
